--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  h2 Hamza is getting training 
   h1 Train Schedule
   p Select your train below to see its current schedule.
   #wrapper
